<resources>
    <string name="app_name">Translately</string>
    <string name="add_phrases">Add Phrases</string>
    <string name="display_phrases">Display Phrases</string>
    <string name="edit_phrases">Edit Phrases</string>
    <string name="language_subscription">Language Subscription</string>
    <string name="translate">Translate</string>
    <string name="translate_text">Enter the phrase to translate</string>
    <string name="phrase_word">Phrase/ Word</string>
    <string name="save">Save</string>
    <string name="list_of_saved_phrases">Saved phrases</string>
    <string name="edit_phrase">Edit Phrase</string>
    <string name="edit">Edit</string>
    <string name="select_languages_and_subscribe">Select languages and subscribe</string>
    <string name="subscribebtn">Update</string>
    <string name="select_a_language_and_translate_the_words">Select a language and translate</string>
    <string name="pronounce">Pronounce</string>
    <string name="select">Languages</string>
    <string name="delete_table">Delete phrase</string>
    <string name="savedtrans">Saved</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="russian">Russian</string>
    <string name="german">German</string>
    <string name="french_word_list">French translations</string>
    <string name="german_word_list">German translations</string>
    <string name="spanish_word_list">Spanish translations</string>
    <string name="russian_word_list">Russian translations</string>
    <string name="offline_translations">Offline Translations</string>
    <string name="mfrench">(Traductions en français)</string>
    <string name="traducciones_al_espa_ol">(Traducciones al español)</string>
    <string name="deutsche_bersetzungen">(Deutsche Übersetzungen)</string>
    <string name="mRussian">(Русские переводы)</string>
    <string name="french_le_fran_ais">French ( le français )</string>
    <string name="german_deutsche">German ( Deutsche )</string>
    <string name="russian11">Russian ( русский )</string>
    <string name="spanish_espa_ol">Spanish ( Español )</string>
    <string name="del">Delete</string>
    <string name="delete_phrases">Delete Phrases</string>
    <string name="a_reader_an_interpreter_and_a_creator_all_in_one_professor_bijay_kumar_das">\'A READER, AN INTERPRETER AND A CREATOR ALL IN ONE \' \n </string>

</resources>
